name:                text-gps
version:             0.1.0.0

synopsis:            Encoding position into character streams
description:         /Global Positioning/ system for streams of characters
                     to (almost) reliably recover the line/column position
		     from inband marks. Certain exotic unicode code points
		     (spaces) are reserved for this encoding.

homepage:            http://github.com/ggreif/text-gps
license:             MIT
license-file:        LICENSE
author:              Gabor Greif
maintainer:          ggreif@gmail.com
copyright:           (c) 2015, Gabor Greif

category:            Text
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Text.Gps
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base
  -- hs-source-dirs:      
  default-language:    Haskell2010
